<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VER_TARIFAS">

    <TextView
        android:id="@+id/textView_ver_tarifas_cabecera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pantalla_ver_tarifas_cabecera"
        app:layout_constraintHorizontal_bias="0.695"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_ver_tarifas_cabecera_2"
        android:layout_width="167dp"
        android:layout_height="19dp"
        android:layout_marginTop="68dp"
        android:text="@string/vacio"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
    android:id="@+id/button_calcular_ahorro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="544dp"
    android:text="@string/boton_calcular_ahorro"
    app:layout_constraintHorizontal_bias="0.882"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton_calcular_bonos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="544dp"
        android:text="@string/boton_calcular_bonos"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_tarifas"
        android:layout_width="404dp"
        android:layout_height="415dp"
        android:layout_marginTop="104dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texto_scroll_tarifas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:textStyle="bold|italic" />
    </ScrollView>

    />

</androidx.constraintlayout.widget.ConstraintLayout>