<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VER_BONOS">


    <TextView
        android:id="@+id/textView_cabecera_ver_bonos"
        android:layout_width="400dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:text="@string/cabecera_ver_bonos"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/boton_exportar_bonos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="548dp"
        android:text="@string/exportar_bonos"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_bonos"
        android:layout_width="400dp"
        android:layout_height="448dp"
        android:layout_marginTop="88dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/texto_scroll_bonos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vacio"
            android:textStyle="bold|italic" />


    </ScrollView>

    />

</androidx.constraintlayout.widget.ConstraintLayout>



